--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "function-plot": "^1.23.3",
+    "interval-arithmetic": "^1.1.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "mathjs": "^12.1.0",
